--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,17 +59,22 @@
 
         <img src="img/hero-image-sea.jpg" class="frontpage-splash-img"></img>
 
-        <nav class="navbar navbar-default collapse navbar-collapse">
+        <nav class="navbar navbar-inverse navbar-custom">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">      
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="/#">
                         <img alt="header-logo" src="img/deepsee-header-logo.png" style="height: 40px; width: 144px"/>
                     </a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div>
+                <div id="myNavbar" class="collapse navbar-collapse">
 
                     <ul class="nav navbar-nav navbar-right social-nav">
                         <li>
